storage/ndb/src/kernel/blocks/suma/Suma.hpp
@@ -434,6 +434,10 @@ public:
   void api_fail_gci_list(Signal*, Uint32 node);
   void api_fail_subscriber_list(Signal*, Uint32 node);
   void api_fail_subscription(Signal*);
+  void api_fail_block_cleanup(Signal* signal, Uint32 failedNode);
+  void api_fail_block_cleanup_callback(Signal* signal,
+                                       Uint32 failedNodeId,
+                                       Uint32 elementsCleaned);
 
   void execSUB_GCP_COMPLETE_ACK(Signal* signal);
 
